Closed Bug 611984 Opened 14 years ago Closed 14 years ago

Compilation failure on mingw in modules/libjar after bug 598416 landing.

Categories

(Core :: XPCOM, defect)

x86_64
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(2 files)

Attached patch fix v1.0Splinter Review
mingw doesn't support SEH exception handling, so we shouldn't try to use it there.
Attachment #490379 - Flags: review?(tglek)
Assignee: nobody → jacek
Blocks: 598416
Attachment #490379 - Attachment is patch: true
Comment on attachment 490379 [details] [diff] [review] fix v1.0 So when windows generates EXCEPTION_IN_PAGE_ERROR(which it seems prone to), mingw apps just crash with no hope of recovery? Please change the define to something like #if defined(XP_WIN) && defined(_MSC_VER)
Attachment #490379 - Flags: review?(tglek) → review+
(In reply to comment #1) > Comment on attachment 490379 [details] [diff] [review] > fix v1.0 > > So when windows generates EXCEPTION_IN_PAGE_ERROR(which it seems prone to), > mingw apps just crash with no hope of recovery? We can't really do much more. win64 SEH exception is planned for GCC 4.6 and win32 for GCC 4.7. Once there will be support, I'm planning to go back to enable such cases again, but it will be more generic probelem that will have to be solved in whole sources. > Please change the define to something like > > #if defined(XP_WIN) && defined(_MSC_VER) I will change it. Thanks for the review.
Attached patch fix v1.1Splinter Review
Attachment #490432 - Flags: approval2.0?
Attachment #490432 - Flags: approval2.0? → approval2.0+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: