Bug 611984 - Compilation failure on mingw in modules/libjar after bug 598416 landing r=tglek a=benjamin