modules/libjar/nsZipArchive.h
@@ -57,7 +57,7 @@
 #include "nsILocalFile.h"
 #include "mozilla/FileUtils.h"
 
-#if defined(XP_WIN)
+#if defined(XP_WIN) && defined(_MSC_VER)
 #define MOZ_WIN_MEM_TRY_BEGIN __try {
 #define MOZ_WIN_MEM_TRY_CATCH(cmd) }                                \
   __except(GetExceptionCode()==EXCEPTION_IN_PAGE_ERROR ?            \
